[package]
name = "benv"
version = "0.1.3"
authors = ["Timon Vonk <timonv@gmail.com>"]
description = "Load env files for an application without the dependency"
homepage = "https://github.com/timonv/benv"
repository = "https://github.com/timonv/benv"
keywords = ["environment", "env", "dotenv", "12factor"]
license-file = "LICENSE"

[dependencies]
docopt = "0.6"
rustc-serialize = "0.3"
